--- a/pom.xml
+++ b/pom.xml
@@ -6,21 +6,27 @@
 
     <groupId>com.tjl.util</groupId>
     <artifactId>TJLUtil</artifactId>
-    <version>1.1</version>
+    <version>2.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
-<!--    <dependencies>-->
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.apache.maven.plugins</groupId>-->
 <!--            <artifactId>maven-assembly-plugin</artifactId>-->
 <!--            <version>3.3.0</version>-->
 <!--            <type>maven-plugin</type>-->
 <!--        </dependency>-->
-<!--    </dependencies>-->
+    </dependencies>
 
 <!--    <build>-->
 <!--        <plugins>-->
