--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.tjl.util</groupId>
+    <groupId>org.tjl.util</groupId>
     <artifactId>TJLUtil</artifactId>
-    <version>3.2</version>
+    <version>3.2.1</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
